// This contains protobuf types in pair with ClairCore's types. See
// https://github.com/quay/claircore for comments on the fields.

edition = "2023";  // successor to proto2 and proto3

package scanner.v4;

import "internalapi/scanner/v4/common.proto";
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/scanner/v4;v4";
option features.(pb.go).api_level = API_OPAQUE;

message IndexReport {
  string hash_id = 1;
  string state = 2;
  bool success = 3;
  string err = 4;
  Contents contents = 5;
}
